src/style.css
* {
    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
        Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    font-weight: 500;
}

body {
    margin: 0;
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: auto 1fr;
    min-height: 100vh;
}

/* HEADER */
.header {
    background: #1F9EFF;
    font-size: 3rem;
    grid-column: span 2;
    grid-row: 1 / 2;
    color: white;
    padding: 1rem 5rem;
}

/* SIDEBAR */

.sidebar {
    background: #ADDCFF;
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    color: gray;
    font-size: 1.5rem;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.sidebar span {
    align-self: center;
}

.filters,
.projects {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.sidebar-container {
    background: white;
    padding: 0.75rem;
    border-radius: 8px;
    border: 1px solid white;
    font-size: 1.2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.sidebar-container:hover {
    border: 1px solid gray;
    cursor: pointer;
}

.projects-title,
.todos-title {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 1rem;
    gap: 0.5rem;
}

/* CONTENT */

.content {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    margin: 0 25%;
    color: gray;
}

.todo-info {
    display: flex;
    align-items: center;
    gap: 1rem;
    overflow: hidden;
}

.todo-info span {
    overflow: hidden;
    text-overflow: ellipsis;
}

.checkbox {
    min-width: 1rem;
    min-height: 1rem;
    border-radius: 5px;
    border: 2px solid gray;
    background: white;
}

.complete {
    background: url(./images/icons8-check-30.png) no-repeat center;
    background-size: fill;
}

.todos-title {
    font-size: 2.5rem;
    border-bottom: 2px solid #EBF6FF;
}

.content-container {
    font-size: 1.1rem;
    padding: 1rem;
    border-bottom: 2px solid #EBF6FF;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.content-container:hover {
    background: #EBF6FF;
    cursor: pointer;
}

/* BUTTONS */

img:hover {
    filter: grayscale(100%) contrast(10000%) brightness(0%);
    cursor: pointer;
}

.action-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.5rem;
}

.add-button,
.edit-button,
.delete-button,
.info-button {
    height: 1.5rem;
}

/* MODAL */

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
    /* Semi-transparent black background */
}

.modal-container {
    background-color: white;
    margin: 10% auto;
    border: 1px solid gray;
    width: max(320px, 30%);
    display: flex;
    flex-direction: column;
}

.modal-title {
    grid-row: 1 / 2;
    background: #1F9EFF;
    font-size: 2rem;
    color: white;
    padding: 1rem 1.5rem;
}

.modal-content {
    grid-row: 2 / 3;
    padding: 1rem 1.5rem;
    font-size: 1.3rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

/* DIFFERENT MODAL DISPLAY CONTAINERS */

#new-project-modal, #edit-project-modal, #new-todo-modal {
    display: none;
}

/* FORM STYLES */

input, select {
    border: 2px solid gray;
    outline: none;
    border-radius: 5px;
    height: 2rem;
    font-size: 1rem;
    padding-left: 0.5rem;
}

.modal-content .action-buttons {
    justify-content: flex-end;
    gap: 1rem;
}

.required {
    color: red;
}

.error-text {
    display: none;
    color: red;
    font-size: 0.8rem;
}

button {
    background: #1F9EFF;
    color: white;
    padding: 0.75rem;
    border: none;
    border-radius: 5px;
    font-size: 1.3rem;
    cursor: pointer;
}

button:hover {
    background: #1b87da;
}

